--- a/Summer_School_Movies/MoviesAPIConsumer/Views/Home/AddMovie.cshtml
+++ b/Summer_School_Movies/MoviesAPIConsumer/Views/Home/AddMovie.cshtml
@@ -49,7 +49,7 @@
     </div>
 
     <div class="text-center panel-body">
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addActorModal">Add Actor</button>
+        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#addActorModal">Add Actor</button>
         <button type="submit" class="btn btn-sm btn-primary">Save</button>
     </div>
 </form>
