--- a/Summer_School_Movies/MoviesAPIConsumer/Views/Home/Index.cshtml
+++ b/Summer_School_Movies/MoviesAPIConsumer/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 <h2>All Movies</h2>
 <a asp-action="AddMovie" class="btn btn-sm btn-primary">Add Movie</a>
 <a asp-action="GetMovie" class="btn btn-sm btn-secondary">Get Movie</a>
+<a asp-action="SearchMovie" class="btn btn-sm btn-secondary">Search By Movie Name or Actor</a>
 
 <table class="table table-sm table-striped table-bordered m-2">
     <thead>
