--- a/Summer_School_Movies/MoviesAPIConsumer/Views/Home/SearchMovie.cshtml
+++ b/Summer_School_Movies/MoviesAPIConsumer/Views/Home/SearchMovie.cshtml
@@ -1,4 +1,4 @@
-﻿@model Movie
+﻿@model IEnumerable<Movie>
 @{ Layout = "_Layout"; ViewBag.Title = "Search Movie";}
 
 <h2>Search Movie <a asp-action="Index" class="btn btn-sm btn-primary">Back</a></h2>
@@ -16,40 +16,39 @@
 
 @if (Model != null)
 {
-    <table class="table table-sm table-striped table-bordered m-2">
-        <thead>
+<table class="table table-sm table-striped table-bordered m-2">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Genre</th>
+            <th>Release</th>
+            <th>Age</th>
+            <th>Top Actors</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var r in Model)
+        {
             <tr>
-                <th>ID</th>
-                <th>Movie Name</th>
-                <th>Movie Description</th>
-                <th>Genre</th>
-                <th>Release Date</th>
-                <th>Age Restriction</th>
-                <th>Top Actors</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>@Model.movieId</td>
-                <td>@Model.movieName</td>
-                <td>@Model.description</td>
-                <td>@Model.movieGenre</td>
-                <td>@Model.releaseDate</td>
-                <td>@Model.ageRestriction</td>
+                <td>@r.movieId</td>
+                <td>@r.movieName</td>
+                <td>@r.description</td>
+                <td>@r.movieGenre</td>
+                <td>@r.releaseDate</td>
+                <td>@r.ageRestriction</td>
                 <td>
-                    @{ if (Model.topActors != null)
+                    <ul>
+                        @foreach (var actor in r.topActors)
                         {
-                            <ul>
-                                @foreach (var actor in Model.topActors)
-                                {
-                                    <li>@actor.actorName</li>
-                                }
-
-                            </ul>
+                            <li>@actor.actorName</li>
                         }
-                    }
-                </td>
+
+                    </ul>
+                </td>              
             </tr>
-        </tbody>
-    </table>
+        }
+    </tbody>
+</table>
 }
