Edited Search Page Removed Unnecessary files

--- a/Summer_School_Movies/MoviesAPIConsumer/Views/Home/SearchMovie.cshtml
+++ b/Summer_School_Movies/MoviesAPIConsumer/Views/Home/SearchMovie.cshtml
@@ -4,7 +4,7 @@
 <h2>Search Movie <a asp-action="Index" class="btn btn-sm btn-primary">Back</a></h2>
 <form method="post" action="SearchMovie">
     <div class="form-group">
-        <label for="movieId">Movie Id:</label>
+        <label for="movieId">Movie Name or Actor Name:</label>
         <input class="form-control" name="query" />
     </div>
     <div class="text-center panel-body">
